# expense-manager-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.cloud.yml  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py
src/bot/: keyboards.py  middlewares.py
src/bot/handlers/: __init__.py  commands.py  document.py  photo.py  text.py  video.py  voice.py
src/database/: __init__.py  connection.py  models.py  repository.py
src/database/migrations/: env.py
src/database/migrations/versions/: 001_initial.py
src/llm/: categorizer.py  expense_parser.py  provider.py  reporter.py
src/media/: __init__.py  transcriber.py  video.py  vision.py
src/utils/: encryption.py
tests/: __init__.py  conftest.py
